<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/txt_dialog"
        android:textSize="30sp"
        android:gravity="center" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c6cfc8"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="#2abaf7"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c6cfc8"/>
        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="#2abaf7"
            android:background="@android:color/transparent"/>
    </LinearLayout>
</LinearLayout>