<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionActivity"
    android:orientation="vertical"
    android:background="#f7f7f7">
<!--    android:background="#f7f7f7"#181a30>-->
    <LinearLayout
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#2abaf7"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option"
            android:textColor="#fff"
            android:textSize="40sp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#fff"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/language"
            android:textColor="#2abaf7"
            android:textSize="26sp" />

        <Switch
            android:id="@+id/switchLanguage"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginRight="30dp"
            android:text="VN-EN"
            android:checked="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#fff"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:textColor="#2abaf7"
            android:textSize="26sp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"/>

        <Switch
            android:id="@+id/switchDarkMode"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="Enable"
            android:checked="false"
            android:textColor="#fff"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#fff"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            android:textColor="#2abaf7"
            android:textSize="26sp"
            android:layout_marginLeft="20dp" />

        <SeekBar
            android:id="@+id/seekBarMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:progress="50"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#fff"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="#2abaf7"
            android:textSize="26sp"
            android:layout_marginLeft="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.0.0"
            android:textColor="#2abaf7"
            android:textSize="26sp"
            android:layout_marginLeft="20dp" />

    </LinearLayout>

</LinearLayout>