<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".HomeActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/play"
            android:textSize="25dp"
            android:textColor="#fff"
            android:background="@drawable/bg_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnRenLuyen"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/training"
            android:textSize="25dp"
            android:textColor="#fff"
            android:background="@drawable/bg_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnOption"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/option"
            android:textSize="25dp"
            android:textColor="#fff"
            android:background="@drawable/bg_button"/>
    </LinearLayout>
</LinearLayout>