<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textColor="#0a0a0a"
                android:textSize="35sp"
                android:gravity="start"/>
            <TextView
                android:id="@+id/txtScore"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#0a0a0a"
                android:textSize="35sp"
                android:gravity="start"/>

            <ImageView
                android:id="@+id/imgSetting"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_setting"
                android:layout_weight="1" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarTimer"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:max="10"
            android:progress="0" />

        <TextView
            android:id="@+id/txtQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2 + 3 = ?"
            android:textSize="40sp"
            android:gravity="center"
            android:textColor="#030303"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TableRow
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                    <TextView
                        android:id="@+id/txtAnsA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_button"
                        android:gravity="center"
                        android:text="6"
                        android:layout_weight="1"
                        android:textSize="30sp"
                        android:textColor="#0a0a0a"/>

                    <TextView
                        android:id="@+id/txtAnsB"
                        android:layout_marginLeft="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:text="2"
                        android:gravity="center"
                        android:textColor="#0a0a0a"
                        android:background="@drawable/bg_button"
                        android:layout_weight="1"/>
                </TableRow>

                <TableRow
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                    <TextView
                        android:id="@+id/txtAnsC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_button"
                        android:gravity="center"
                        android:text="6"
                        android:textSize="30sp"
                        android:textColor="#0a0a0a"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/txtAnsD"
                        android:layout_marginLeft="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:text="2"
                        android:gravity="center"
                        android:textColor="#0a0a0a"
                        android:background="@drawable/bg_button"
                        android:layout_weight="1"/>
                </TableRow>

            </TableLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_score"
                android:textSize="35sp"
                android:textColor="#0a0a0a"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_marginRight="20dp"/>
            <TextView
                android:id="@+id/txtMaxScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textSize="35sp"
                android:textColor="#0a0a0a"/>
        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:id="@+id/llGameOver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_marginBottom="20dp"
            android:background="#fff"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/high_score"
                android:textSize="25sp"
                android:gravity="end"
                android:textColor="#0a0a0a"/>
            <TextView
                android:id="@+id/txtMScoreGameOver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="#0a0a0a"
                android:text="0"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="#fff">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="25sp"
                android:textColor="#0a0a0a"
                android:gravity="end"
                android:layout_weight="1"
                android:layout_marginLeft="60dp"/>
            <TextView
                android:id="@+id/txtScoreGameOver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="30sp"
                android:textColor="#0a0a0a"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnPlayAgain"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textColor="#0a0a0a"
            android:textSize="20sp"
            android:text="@string/play_again"
            android:background="#fcba03"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btnTraining1"
            android:layout_marginTop="20dp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textColor="#0a0a0a"
            android:textSize="20sp"
            android:text="@string/go_back_training"
            android:background="#fcba03"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textColor="#0a0a0a"
            android:background="#fff"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btnResume"
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textColor="#0a0a0a"
            android:textSize="20sp"
            android:text="@string/resume"
            android:background="#fcba03"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btnTraining2"
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textColor="#0a0a0a"
            android:textSize="20sp"
            android:text="@string/go_back_training"
            android:background="#fcba03"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnOption"
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textColor="#0a0a0a"
            android:textSize="20sp"
            android:text="@string/option"
            android:background="#fcba03"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btnQuit"
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textColor="#0a0a0a"
            android:textSize="20sp"
            android:text="@string/quit"
            android:background="#fcba03"
            android:layout_gravity="center"/>
    </LinearLayout>
</FrameLayout>